--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,9 +3,30 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            <link href="{{ asset('asserts/css/style.css') }}" type="text/css" rel="stylesheet" />
+        {% endblock %}
     </head>
     <body>
+        {% block header %}
+            <div id="header">
+                <h1>Tareas Symfony</h1>
+                <ul id="menu">
+                    {% if app.user %} {# Si está identificado #}
+                        <li><a href="{{ path('tasks') }}">Inicio</a></li>
+                        <li><a href="{{ path('my_tasks') }}">Mis Tareas</a></li>
+                        <li><a href="{{ path('task_create') }}">Crear Tarea</a></li>
+
+                        <li class="right"><a href="{{ path('logout') }}">Logout</a></li>
+                        <li class="right"><a href="">{{ app.user.name ~ ' ' ~ app.user.surname }}</a></li>
+                    {% else %}
+                        <li><a href="{{ path('login') }}">Login</a></li>
+                        <li><a href="{{ path('register') }}">Registro</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+            <div class="clearfix"></div>
+        {% endblock %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
